overflow-x fix,

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@
 
     --gradient1: linear-gradient(to top, #accbee 0%, #94accb 100%);
 
-    --secondary: #B8F3FF;
+    --secondary: rgba(154, 126, 76);
     --accent: #63768D;
     --accent2: #554971;
     --accent3: #94accb;
@@ -75,6 +75,10 @@ body {
     margin-top: 62px;
     overflow-x: hidden;
     background: black;
+}
+
+h2{
+    color: rgb(202, 165, 100);
 }
 
 img {
@@ -1274,7 +1278,7 @@ h4{
     width: 80%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    background: goldenrod;
+    background: var(--secondary);
     gap: 7px;
     box-shadow: 0px 0px 20px 1px rgba(255, 255, 255, 0);
     transition: 1s linear;
